[package]
name = "drips"
version = "0.1.2"
authors = ["Noah Masur <noah.masur@take2games.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusoto_core = "0.43.0"
rusoto_credential = "0.43.0"
rusoto_ec2 = "0.43.0"
tokio = "0.2.21"
futures = "0.3.5"
dirs-next = "1.0.1"
clap = "2.33.1"
colored = "1.9.3"
